--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: Lion's Pride Inn
+subtitle: Robin's blog  
+description: Thinking，Inspiring，Recording
+author: Robin Zheng  
+email: zrb915@live.com
+language: zh-CN 
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://robinzheng.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -69,5 +70,6 @@ stylus:
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
-# repo: git@github.com:robinroar/robinroar.github.io
+  type: git
+  repo: git@github.com:robinroar/robinroar.github.io
+  branch: master
